--- a/EstilosContactenos.css
+++ b/EstilosContactenos.css
@@ -1,4 +1,3 @@
-
 .banner{
     background-color: cornflowerblue;
     background-size: cover;
@@ -9,23 +8,16 @@
     color: white;
     font-family: "Gibson Regular",Tahoma,Helvetica,sans-serif;
 }
+
 .main{
     margin: 2%;
 }
-.carousel-inner img {
-    width: 100%;
-    max-height: 460px;
+*{
+    margin-top: 5px;
+
 }
 
-.carousel-inner {
-    height: 450px;
-}
-
-
-.container {
-    text-align: center;
-}
-
+/*Estilos para el menu*/
 .nav {
     background-color:azure; /* Color de fondo del menú */
     color: aqua; /* Color de texto del menú */
@@ -56,8 +48,8 @@
     background-color:lightseagreen; /* Color de fondo cuando se pasa el ratón por encima del enlace */
   }
 
- /*Pie de pagina*/
- .footer {
+/*Pie de pagina*/
+  .footer {
     padding-top: 50px;
     padding-bottom: 50px;
     margin-top: auto;
