--- a/EstilosViajes.css
+++ b/EstilosViajes.css
@@ -8,6 +8,34 @@
     color: white;
     font-family: "Gibson Regular",Tahoma,Helvetica,sans-serif;
 }
+.nav {
+  background-color:azure; /* Color de fondo del menú */
+  color: aqua; /* Color de texto del menú */
+  font-family: Arial, sans-serif; /* Fuente del texto del menú */
+  padding: 10px; /* Espacio alrededor del menú */
+  text-align: center; /* Centra el menú horizontalmente */
+}
+.nav ul {
+  list-style: none; /* Elimina los puntos de la lista */
+  margin: 0;
+  padding: 0;
+}
+
+.nav li {
+  display: inline-block; /* Hace que los elementos se muestren en línea */
+  margin: 0 10px; /* Espacio entre los elementos del menú */
+}
+
+.nav li a {
+  color: rebeccapurple; /* Color de texto del enlace */
+  text-decoration: none; /* Elimina la subrayado del enlace */
+  padding: 10px; /* Espacio alrededor del texto del enlace */
+  border-radius: 5px; /* Redondea las esquinas del enlace */
+}
+
+.nav li a:hover {
+  background-color:lightseagreen; /* Color de fondo cuando se pasa el ratón por encima del enlace */
+}
 
 .main{
     margin: 2%;
