--- a/EstilosPlanes.css
+++ b/EstilosPlanes.css
@@ -1,4 +1,41 @@
+.banner{
+  background-color: cornflowerblue;
+  background-size: cover;
+  text-align: left;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 2%;
+  color: white;
+  font-family: "Gibson Regular",Tahoma,Helvetica,sans-serif;
+}
+.nav {
+  background-color:azure; /* Color de fondo del menú */
+  color: aqua; /* Color de texto del menú */
+  font-family: Arial, sans-serif; /* Fuente del texto del menú */
+  padding: 10px; /* Espacio alrededor del menú */
+  text-align: center; /* Centra el menú horizontalmente */
+}
+.nav ul {
+  list-style: none; /* Elimina los puntos de la lista */
+  margin: 0;
+  padding: 0;
+}
 
+.nav li {
+  display: inline-block; /* Hace que los elementos se muestren en línea */
+  margin: 0 10px; /* Espacio entre los elementos del menú */
+}
+
+.nav li a {
+  color: rebeccapurple; /* Color de texto del enlace */
+  text-decoration: none; /* Elimina la subrayado del enlace */
+  padding: 10px; /* Espacio alrededor del texto del enlace */
+  border-radius: 5px; /* Redondea las esquinas del enlace */
+}
+
+.nav li a:hover {
+  background-color:lightseagreen; /* Color de fondo cuando se pasa el ratón por encima del enlace */
+}
 .tituloViajes {
     position: relative;
     display: inline-block;
@@ -31,13 +68,27 @@
   font-weight: 600;
 }
 
-/* .cardViajes img {
-    width: 100%;
-    max-height: 460px;
-} */
-
 .zonas{
   object-fit: contain;
   align-items: center;
   
+}
+.footer {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-top: auto;
+}
+
+.footer-text {
+  font-size: 16px;
+  color: #aebad1;
+  line-height: 1.5;
+  margin-bottom: 10px;
+}
+
+.footer-copy {
+  font-size: 14px;
+  color: #999;
+  text-align: center;
+  margin-top: 20px;
 }
