--- a/EstilosPlanes.css
+++ b/EstilosPlanes.css
@@ -55,9 +55,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: #312b2b;
+    color: #2b2d31;
   font-family:monospace;
-  font-size:larger;
+  font-size:xx-large;
     
   }
 .textoViajes h1{
